--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # My suggests:
 .pylintrc
 .vscode
-settings.json
+#  settings.json  It is in .vscode
+sandbox
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
