--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,7 @@
 {
   "name": "my-ddg-project-cloud-devcontainer",
   "image": "mcr.microsoft.com/vscode/devcontainers/python:3.8",
+  "postCreateCommand": "pip install --upgrade pip && pip install typing_extensions && pip install PyQt6 && pip install qasync ",
   "features": {
   }
 }
